--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="./src/assets/font.css" type="text/css"> -->
+    <link rel="stylesheet" href="./src/assets/font.css" type="text/css">
     <title>bayar.in</title>
   </head>
   <body>
